--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-lxml==4.6.3
-requests==2.20.0
-urllib3==1.26.5
-selenium==3.8.1
-redis==3.2.1
-PyMySQL==0.8.0
-sqlalchemy==1.3.11
-pika==1.1.0
-pysocks==1.7.1
+lxml
+requests
+urllib3
+selenium
+redis
+PyMySQL
+sqlalchemy
+pika
+pysocks
